--- a/Collections.html
+++ b/Collections.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <img class="logo" src="images/wb logo.gif" alt="logo">
+    <img class="logo" src="images/WB logo.gif" alt="logo">
         <a href="index.html" class="logo" alt="Warner Bros">
             <span>Warner Bros.</span> 
         </a>    
