--- a/Tvshows.html
+++ b/Tvshows.html
@@ -25,11 +25,11 @@
 
   <nav>
     <div id="nav-links">
-      <a class="nav-link" href="Warner Bros Movies Page.html">
+      <a class="nav-link" href="Movies.html">
         <h3 class="nav-link-label rubik-font">Movies</h3>
       </a>
-      <a class="nav-link" href="Warner Bros Series Page.html">
-        <h3 class="nav-link-label rubik-font">Series</h3>
+      <a class="nav-link" href="Tvshows.html">
+        <h3 class="nav-link-label rubik-font">TV Shows</h3>
       </a>
       <a class="nav-link" href="Games.html">
         <h3 class="nav-link-label rubik-font">Games</h3>
@@ -37,7 +37,7 @@
       <a class="nav-link" href="Collections.html">
         <h3 class="nav-link-label rubik-font">Collections</h3>
       </a>
-      <a class="nav-link" href="AboutUs.html">
+      <a class="nav-link" href="Aboutus.html">
         <h3 class="nav-link-label rubik-font">About Us</h3>
       </a>
     </div>
