--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="swiper-slide">
-          <img src="images/tedlasso-s3_v1_0 (0)" alt="Black Adam">
+          <img src="images/tedlasso-s3_v1_0 (2).jpg" alt="Black Adam">
         </div>
 
         <div class="swiper-slide">
