--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="swiper-slide">
-          <img src="images/DC.png" alt="DC League">
+          <img src="images/share (1).jpg" alt="DC League">
         </div>
 
       </div>
